--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,3 +13,11 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
 }
+
+.reports {
+    width: 800px;
+    height: 500px;
+    border: 1px solid rgba(230, 217, 217, 0.5);
+    margin: 50px auto;
+    box-shadow: 0 0 5px rgba(179, 180, 179, 0.5);
+}
