--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,3 +22,51 @@ code {
     /* box-shadow: 0 0 5px rgba(179, 180, 179, 0.5); */
     padding: 50px;
 }
+
+.analysis {
+    /* margin-bottom: 10px; */
+    width: 800px;
+    margin: 0 auto;
+}
+
+.analysis h1 {
+    text-align: center;
+}
+
+.analysisSection {
+    margin-bottom: 10px;
+}
+
+.analysisObject {
+    font-size: 15px;
+    font-weight: bold;
+    padding: 5px;
+    /* line-height: 2; */
+    /* align-items: center; */
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.analysisObject span {
+    margin: 0 10px;
+}
+
+.analysisDefects {
+    padding-left: 40px;
+    display: flex;
+}
+
+.analysisDefects div {
+    margin-right: 30px;
+}
+
+.date {
+    width: 100px;
+}
+
+.time {
+    width: 80px;
+}
+
+.train {
+    width: 50px;
+}
