--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,13 +53,31 @@ h3 {
     margin-bottom: 10px;
 }
 
-.analysisObject {
+.headerAnalysis {
+    display: flex;
+    justify-content: space-between;
+
     font-size: 15px;
     font-weight: bold;
     padding: 5px;
-    /* line-height: 2; */
-    /* align-items: center; */
     background-color: rgba(0, 0, 0, 0.05);
+}
+
+.close {
+    border: 1px solid #000;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    line-height: 15px;
+    text-align: center;
+    background-color: #777;
+    cursor: pointer;
+    color: white;
+}
+
+.close:hover {
+    background-color: #fff;
+    color: #777;
 }
 
 .analysisObject span {
@@ -85,4 +103,15 @@ h3 {
 
 .train {
     width: 50px;
+}
+
+.no-display {
+    display: none;
+}
+
+@media print {
+    .no-print,
+    .no-print * {
+        display: none !important;
+    }
 }
